k8s/demo-site/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: codewire-demo-site
  labels:
    app: codewire-demo-site
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: codewire-demo-site
